// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexView should render with correct props 1`] = `
<main
  className="index"
>
  <h1
    className="index__header"
  >
    Todo app
  </h1>
  <form
    className="index__form"
    onSubmit={[Function]}
  >
    <label
      className="index__form__label"
      htmlFor="newtodo"
    >
      Add a new todo:
    </label>
    <input
      autoFocus={true}
      className="index__form__input"
      name="newtodo"
      onChange={[Function]}
      type="text"
      value=""
    />
    <Button
      click={[Function]}
      text="Add"
    />
  </form>
  <br />
  <main
    className="index__todo-container"
  />
</main>
`;

exports[`IndexView should render with correct props 2`] = `
<main
  className="index"
>
  <Loader />
  <h1
    className="index__header"
  >
    Todo app
  </h1>
  <form
    className="index__form"
    onSubmit={[Function]}
  >
    <label
      className="index__form__label"
      htmlFor="newtodo"
    >
      Add a new todo:
    </label>
    <input
      autoFocus={true}
      className="index__form__input"
      name="newtodo"
      onChange={[Function]}
      type="text"
      value="A title"
    />
    <Button
      click={[Function]}
      text="Add"
    />
  </form>
  <br />
  <main
    className="index__todo-container"
  >
    <TodoComponent
      setDone={[Function]}
      todo={
        Todo {
          "done": false,
          "number": 0,
          "setDone": [Function],
          "title": "title",
        }
      }
    />
    <TodoComponent
      setDone={[Function]}
      todo={
        Todo {
          "done": true,
          "number": 1,
          "setDone": [Function],
          "title": "testing",
        }
      }
    />
  </main>
</main>
`;
